increase profile min-height to fix layout bug

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -147,7 +147,7 @@ header em { font-style:normal; color:#fd742a; }
     float: left;
     margin: 20px;
     text-align: center;
-    min-height: 270px;
+    min-height: 325px;
     min-width: 270px;
 
 		img {
